feat(chat): add basic chat interface

--- a/resources/views/inertia_layout.edge
+++ b/resources/views/inertia_layout.edge
@@ -11,7 +11,7 @@
   @vite(['inertia/app/app.tsx', `inertia/pages/${page.component}.tsx`])
 </head>
 
-<body>
+<body class="font-body">
   @inertia()
 </body>
 
