--- a/inertia/css/app.css
+++ b/inertia/css/app.css
@@ -1,1 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap');
 @import 'tailwindcss';
+
+@theme {
+  --font-body: 'Space Grotesk', sans-serif;
+}
